workspace = { members = ["unity_unpacker_lib"] }
[package]
name = "unity_unpacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"]}
unity_unpacker_lib = { git = "https://github.com/DirkChristianBecker/unity_unpacker_lib" }
rust-tools = { git = "https://github.com/DirkChristianBecker/rust-tools"}
